# binding-concepts-complexity

./: .gitignore  README.md  pyproject.toml
exports/dataset_release_2026-03-01/: MANIFEST.tsv
exports/dataset_release_2026-03-01/clevr/: labels.csv  paper_samples.csv
exports/dataset_release_2026-03-01/clevr2d/: metadata.json  paper_samples.csv
exports/dataset_release_2026-03-01/pug_spare/: labels.csv  metadata.json  paper_samples.csv
src/mob/: __init__.py
src/mob.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mob/clip_embeddings/: __init__.py  approximate_complexity_scenes.py  dataset_io.py  extract_dataset_and_embeddings_from_pretrained_clike.py  get_clip_embeddings.py  make_intervention_table.py  mds.py  run_analyses.sh  run_interventions.py  run_probe_suite.py  train_embeddings.py
src/mob/clip_embeddings/amortization/: __init__.py  models.py  scenes.py  train_clean.py
