[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mob"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "Proprietary" }
authors = []
dependencies = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "deepdiff>=8.6.1",
    "gdown>=5.2.0",
    "imageio[ffmpeg]>=2.37.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "meshio>=5.3.5",
    "plotly>=6.4.0",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "pyvista[jupyter]>=0.46.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.22.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mob*"]

# [tool.uv.sources]
# stnd = { path = "modules/stnd", editable = true }
# clip = { git = "https://github.com/openai/CLIP.git" }

# [tool.uv]
# dev-dependencies = [
#     "stnd",
# ]


